@@ -259,7 +259,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration combine.children="override">
-					<argLine>-Xmx1024m -XX:MaxPermSize=256m ${surefireArgs}</argLine>
+					<argLine>-Xmx1024m ${surefireArgs}</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
